tests/error/remainderInteger-wrong-1st-argument-string.uplc
(program 1.0.0[[(builtin remainderInteger)(con string "Ola")](con integer 10)])